--- a/sginIn.html
+++ b/sginIn.html
@@ -11,16 +11,16 @@
     <p>Create account and start to play</p>
     <hr>
     <label for="name"><b>Account Name</b></label>
-    <input type="name" placeholder="Enter User Name" name="name" pattern="[0-9a-zA-Z][4,12]" required>
+    <input type="name" placeholder="Enter User Name" name="name"required>
 
     <label for="email"><b>Email</b></label>
     <input type="text" placeholder="Enter Email" name="email" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder="Enter Password" id="password" required>
 
     <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+    <input type="password" placeholder="Repeat Password" id="confirm_password" required>
     <hr>
 
     <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
@@ -30,5 +30,18 @@
   </div>
  </div>
 </form>
+   <script type="text/javascript">
+       var password = document.getElementById("password")
+       ,confirm_password = document.getElementById("confirm_password");
+       function validatePassword(){
+        if(password.value !=confirm_password.value){
+           confirm_password.setCustomValidity("Pass words Don't Match"); 
+        }else{
+            confirm_password.setCustomValidity('');
+        }
+       }
+       password.onchange = validatePassword; 
+       confirm_password.onkeyup = validatePassword;
+   </script>
 </body>
 </html>
