--- a/LOLheros.html
+++ b/LOLheros.html
@@ -48,11 +48,64 @@
 	   		<img src="RiotX_ChampionList_fiora.jpg">
 	   <h3>Fiora</h3>		
 	   </div>
+
 	   <div class="picture">
 	   		<img src="RiotX_ChampionList_gangplank.jpg">
-	   <h3>Gangplank</h3>		
+	   <h3>Gangplank/h3>
+       </div>
+
+	   <div class="picture">
+	   		<img src="RiotX_ChampionList_braum.jpg">
+	   <h3>Braum</h3>
+       </div>
+	   <div class="picture">
+	   		<img src="RiotX_ChampionList_bard.jpg">
+	   <h3>Bard</h3>
+        </div>
+	   <div class="picture">
+	   		<img src="RiotX_ChampionList_blitzcrank.jpg">
+	   <h3>Blitzcrank</h3>		
+	   </div>
+       
+       <div class="picture">
+	   		<img src="RiotX_ChampionList_brand.jpg">
+	   <h3>Brand</h3>
 	   </div>
 
+	   <div class="picture">
+	   		<img src="RiotX_ChampionList_jax.jpg">
+	   <h3>Jax</h3>
+	   </div>
+	   <div class="picture">
+	   		<img src="RiotX_ChampionList_monkeyking.jpg">
+	   <h3>Wukong</h3>
+	   </div>
+	   <div class="picture">
+	   		<img src="RiotX_ChampionList_mordekaiser.jpg">
+	   <h3>Mordekaiser</h3>
+	   </div>
+	   	<div class="picture">
+	   		<img src="RiotX_ChampionList_renekton.jpg">
+	   <h3>Renekton</h3>
+	   </div>
+	   <div class="picture">
+	   		<img src="RiotX_ChampionList_sylas.jpg">
+	   <h3>Sylas</h3>
+	   </div>
+
+	   <div class="picture">
+	   		<img src="RiotX_ChampionList_tryndamere.jpg">
+	   <h3>Tryndamere</h3>
+	   </div>
+	   	<div class="picture">
+	   		<img src="RiotX_ChampionList_yasuo.jpg">
+	   <h3>Yasuo</h3>
+	   </div>
+
+	   	<div class="picture">
+	   		<img src="RiotX_ChampionList_zed.jpg">
+	   <h3>Zed</h3>
+	   </div>	
 </div> 		
       
 	  <div class="videoContainer">	
