--- a/LOLheros.html
+++ b/LOLheros.html
@@ -51,7 +51,7 @@
 
 	   <div class="picture">
 	   		<img src="RiotX_ChampionList_gangplank.jpg">
-	   <h3>Gangplank/h3>
+	   <h3>Gangplank</h3>
        </div>
 
 	   <div class="picture">
